# mcp-demo

./: .gitignore  README.md
mcp_server/: pyproject.toml
mcp_server/mcp_demo/: server.py
node_project/: .gitignore  index.ts  logger.ts  package.json
